# MetalGenie-Evo

./: .gitignore  FeGenie-Evo.py  LICENSE  MetalGenie-Evo  MetalGenie-Evo.py  README.md  curation_report.tsv  environment.yml  pyproject.toml  setup.sh
hmm_library/: FeGenie-map.txt  HMM-bitcutoffs.txt  README.md  hmm_registry.tsv  operon_rules.json
hmm_library/iron_aquisition-iron_transport/: NF041018.hmm  NF041019.hmm  NF041020.hmm
hmm_library/iron_aquisition-siderophore_synthesis/: All_seq_Fusarinine.hmm  All_seq_putSID2.hmm  F9X9V1_NRPS2_V2.hmm  Fer3_USTMA_V2.hmm  FslA.hmm  FslC.hmm  K00216.hmm  K00257.hmm  K00824.hmm  K01252.hmm  K01582.hmm  K01780.hmm  K01851.hmm  K01909.hmm  K04759.hmm  K04788.hmm  K04789.hmm  K04790.hmm  K04791.hmm  K04792.hmm  K04793.hmm  K05375.hmm  K07116.hmm  K07224.hmm  K07230.hmm  K10531.hmm  K11604.hmm  K12237.hmm  K12238.hmm  K12239.hmm  K12240.hmm  K12241.hmm  K12346.hmm  K13745.hmm  K14759.hmm  K15584.hmm  K15652.hmm  K15653.hmm  K15681.hmm  K15721.hmm  (+74 more)
hmm_library/iron_aquisition-siderophore_transport/: K02012.hmm  K02014.hmm  K02016.hmm  K02361.hmm  K02362.hmm  K02363.hmm  K02364.hmm  K03894.hmm  K03895.hmm  K03896.hmm  K03897.hmm  K04778.hmm  K04780.hmm  K04781.hmm  K04782.hmm  K04783.hmm  K04784.hmm  K04785.hmm  K04786.hmm  K04787.hmm  K07243.hmm  K08197.hmm  NF040982.hmm  NF040984.hmm  NF040985.hmm  NF040986.hmm  NF040987.hmm  put_B4EXX6_V2.hmm  put_B4EXY3_V2.hmm  put_FcuA_V3_corr.hmm  put_FhuA_V3_corr.hmm  (+2 more)
scripts/: assign_flat_hmms.py  build_hmm_library.py  curate_hmm_library.py  plot_heatmap.R
test_data/: test_run.sh
(+255 files in other folders)
