[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "metalgenie-evo"
version = "1.0.2d"
description = "HMM-based annotation of iron cycling and metal resistance genes in genomes and metagenomes"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"

# Pure Python standard library only — external tools (hmmsearch, prodigal,
# samtools) are installed via conda from environment.yml
dependencies = []

keywords = [
    "bioinformatics", "metagenomics", "iron cycling",
    "metal resistance", "HMM", "annotation"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Intended Audience :: Science/Research",
]

[project.scripts]
MetalGenie-Evo = "metalgenie_evo.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
